--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -23,8 +23,8 @@
     "    return response.json()  # Returns the search result as JSON\n",
     "\n",
     "# Replace the placeholders with your actual API Key and Search Engine ID\n",
-    "api_key = \"AIzaSyCXpdW7rVmmhRkoiako254GXmAE5Jk1YS4\"\n",
-    "search_engine_id = \"53452cbc449dd43da\"\n",
+    "api_key = \"API-KEY\"\n",
+    "search_engine_id = \"Search_engine-ID\"\n",
     "query = \"Identify the industry in which Canoo (Canoo, a publicly traded company listed on NASDAQ) operates, along with its size, growth rate, trends, and key players.\"\n",
     "\n",
     "# Perform the search\n",
