--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -701,8 +701,8 @@
     "    return response.json()  # Returns the search result as JSON\n",
     "\n",
     "# Replace the placeholders with your actual API Key and Search Engine ID\n",
-    "api_key = \"AIzaSyCXpdW7rVmmhRkoiako254GXmAE5Jk1YS4\"\n",
-    "search_engine_id = \"53452cbc449dd43da\"\n",
+    "api_key = \"API-KEY\"\n",
+    "search_engine_id = \"Search_engine-ID\"\n",
     "query = \"Analyze Canoo's (Canoo, a publicly traded company listed on NASDAQ) main competitors, including their market share, products or services offered, pricing strategies, and marketing efforts.\"\n",
     "\n",
     "# Perform the search\n",
@@ -1081,8 +1081,8 @@
     "    return response.json()  # Returns the search result as JSON\n",
     "\n",
     "# Replace the placeholders with your actual API Key and Search Engine ID\n",
-    "api_key = \"AIzaSyCXpdW7rVmmhRkoiako254GXmAE5Jk1YS4\"\n",
-    "search_engine_id = \"53452cbc449dd43da\"\n",
+    "api_key = \"API-KEY\"\n",
+    "search_engine_id = \"Search_engine-ID\"\n",
     "query = \"Identify key trends in the market in which Canoo operates (Canoo has designed a modular electric platform purpose-built to deliver maximum vehicle interior space that is customizable across all owners in the vehicle lifecycle to support a wide range of vehicle applications for consumers and businesses.), including changes in consumer behavior, technological advancements, and shifts in the competitive landscape. \"\n",
     "\n",
     "# Perform the search\n",
