--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -1126,8 +1126,8 @@
     "    return response.json()  # Returns the search result as JSON\n",
     "\n",
     "# Replace the placeholders with your actual API Key and Search Engine ID\n",
-    "api_key = \"AIzaSyCXpdW7rVmmhRkoiako254GXmAE5Jk1YS4\"\n",
-    "search_engine_id = \"53452cbc449dd43da\"\n",
+    "api_key = \"API-KEY\"\n",
+    "search_engine_id = \"Search_engine-ID\"\n",
     "query = \"Gather information on Canoo's (US based EV company,Canoo has designed a modular electric platform purpose-built) financial performance, including its revenue, profit margins, return on investment, and expense structure \"\n",
     "\n",
     "# Perform the search\n",
