--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -80,7 +80,7 @@
     "    \"engine\": \"duckduckgo\",\n",
     "    \"q\": \"Canoo, a publicly traded company listed on NASDAQ (ticker symbol: GOEV)\",\n",
     "    \"kl\": \"in-en\",\n",
-    "    \"api_key\": \"7097bb95748aa343ae8a83d19dc3a1eba570a15d960bb4a66580662ad1f23b91\"  # Use your actual API key\n",
+    "    \"api_key\": \"API-KEY\"  # Use your actual API key\n",
     "}\n",
     "\n",
     "search = GoogleSearch(params)\n",
@@ -516,7 +516,7 @@
     "params = {\n",
     "    \"engine\": \"duckduckgo\",\n",
     "    \"kl\": \"in-en\",\n",
-    "    \"api_key\": \"7097bb95748aa343ae8a83d19dc3a1eba570a15d960bb4a66580662ad1f23b91\"\n",
+    "    \"api_key\": \"API-KEY\"\n",
     "}\n",
     "\n",
     "# Define the filename and headers\n",
@@ -602,7 +602,7 @@
     "params = {\n",
     "    \"engine\": \"duckduckgo\",\n",
     "    \"kl\": \"in-en\",\n",
-    "   \"api_key\": \"7097bb95748aa343ae8a83d19dc3a1eba570a15d960bb4a66580662ad1f23b91\"\n",
+    "   \"api_key\": \"API-KEY\"\n",
     "}\n",
     "\n",
     "# Define the filename and headers\n",
@@ -691,7 +691,7 @@
     "params = {\n",
     "    \"engine\": \"duckduckgo\",\n",
     "    \"kl\": \"in-en\",\n",
-    "    \"api_key\": \"7097bb95748aa343ae8a83d19dc3a1eba570a15d960bb4a66580662ad1f23b91\"  # Use your actual API key\n",
+    "    \"api_key\": \"API-KEY\"  # Use your actual API key\n",
     "}\n",
     "\n",
     "# Define the filename and headers for the CSV file\n",
@@ -749,7 +749,7 @@
     "params = {\n",
     "    \"engine\": \"duckduckgo\",\n",
     "    \"kl\": \"in-en\",\n",
-    "    \"api_key\": \"7097bb95748aa343ae8a83d19dc3a1eba570a15d960bb4a66580662ad1f23b91\"  # Use your actual API key\n",
+    "    \"api_key\": \"API-KEY\"  # Use your actual API key\n",
     "}\n",
     "\n",
     "# Define the filename and headers for the CSV file\n",
